Change line height to fix extra space in new font

--- a/css/love.css
+++ b/css/love.css
@@ -131,6 +131,7 @@ body {
     overflow: hidden;
     user-select: none;
     color: var(--text-color);
+    line-height: 1.1;
 }
 
 th {
